<resources>
    <!--    Error Messages-->
    <string name="failed_to_resolve_registration">Failed to resolve registration</string>
    <string name="signup_failed">Signup failed, please try again</string>
    <string name="login_failed">Login failed, please try again</string>
    <string name="loading_destinations_failed">Failed to load destinations, please check your connection</string>
    <string name="loading_trips_failed">Failed to load trips, please check your connection</string>
    <string name="loading_tickets_failed">Failed to load tickets, please check your connection</string>
    <string name="ticket_not_found">Ticket not found</string>
    <string name="failed_to_save_ticket">Failed to save ticket</string>
    <string name="trip_not_found">Trip not found</string>
    <string name="failed_to_load_trip">Failed to load trip</string>
    <string name="failed_to_resolve_app_version">Failed to resolve app version, check your connection</string>
    <string name="failed_to_reserve_seat">Failed to reserve seat</string>
    <string name="could_not_find_user">Couldn\'t find user</string>
    <string name="seats_reserved_successfully">Seat(s) reserved successfully</string>
    <string name="update_to_continue">Please update your App to continue</string>
    <string name="no_network">No network, check your connection</string>
    <string name="failed_to_load_payment_info">Failed to Load payment Info</string>
    <string name="failed_to_redeem_code">Failed to redeem Code, try again</string>
    <string name="payment_failed">Payment Failed, try again</string>
    <string name="redeem_code_incorrect">Promo code is incorrect</string>
    <string name="failed_to_load_balance">Failed to load balance</string>
    <string name="failed_to_load_transactions">Failed to load balance</string>
    <!--    Error Messages-->

    <string name="app_name" translatable="false">Safraa</string>
    <string name="invite_link_image_url" translatable="false">https://firebasestorage.googleapis.com/v0/b/safraa-production.appspot.com/o/ahmedSafraa%20FB%20Logo%40200x-100.jpg?alt=media&amp;token=5df8f1e2-77de-44cb-824d-a86220b9b578</string>
    <string name="seat_times_price" translatable="false">%1$s×%2$s</string>
    <string name="login">Login</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="please_enter_the_verification_code">Please enter the verification code</string>
    <string name="code">Code</string>
    <string name="verification">Verification</string>
    <string name="name">Name</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="signup">Signup</string>
    <string name="terms_and_conditions">By signing up you agree to the terms and conditions of Rihla</string>
    <string name="no_trips_found">No Trips Found</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="trip_details">Trip Details</string>
    <string name="reserve">Reserve</string>
    <string name="tickets">Tickets</string>
    <string name="trips">Trips</string>
    <string name="company">Company</string>
    <string name="seats">Seats</string>
    <string name="departure_within">Departure within %s</string>
    <string name="departure">Departure</string>
    <string name="sum">Sum: </string>
    <string name="instructions">Instructions</string>
    <string name="instruction_1">1) Passengers should be present at least 30 min before departure</string>
    <string name="instruction_2">2) Arriving late can get your ticket cancelled</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="logout">Logout</string>
    <string name="safraa_version" translatable="false">Safraa version %s</string>
    <string name="personal_info">Personal Info</string>
    <string name="seats_selected">%1$d Seat Selected </string>
    <string name="price_sdg">%s SDG</string>
    <string name="settings">Settings</string>
    <string name="please_confirm_the_seats_you_want_to_book">Please confirm the name and seats you want to book</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_seats">Confirm Seats</string>
    <string name="prebooking_successful">Prebooking Successful</string>
    <string name="prebook_info_1">1) This prebooking is valid for 30 minutes</string>
    <string name="prebook_info_2">2) To confirm your booking please pay the ticket price</string>
    <string name="prebook_info_3">3) You can pay now or later in \'Tickets\' screen</string>
    <string name="pay_now">Pay now</string>
    <string name="later">Later</string>
    <string name="transaction_details">Transaction details</string>
    <string name="amount">Amount</string>
    <string name="use_promo_code">Use promo Code</string>
    <string name="use_a_promo_code_to_get_a_discount">Use a promo code to get a discount</string>
    <string name="payment_details">Payment Details</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="whatsapp_receipt_number">Whatsapp receipt number</string>
    <string name="paid">Paid</string>
    <string name="payment">Payment</string>
    <string name="copied">Copied successfully</string>
    <string name="retry">Retry</string>
    <string name="payment_disclaimer">When sending any amount make sure to write your name is visible in the receipt, or send your name in a whatsapp message afterwards</string>
    <string name="payment_confirmation_message">Have you paid %1$s to %2$s in the account number %3$s and also sent the receipt containing your full name to %4$s</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="payment_successful">Payment successful</string>
    <string name="payment_successful_info">We will inform you when the payment gets confirmed by the bus company, follow the status in the tickets screen</string>
    <string name="redeem">Redeem</string>
    <string name="required">Required</string>
    <string name="code_redeemed">Code redeemed successfully</string>
    <string name="contact_us">Contact Us</string>
    <string name="prebook">Prebooked</string>
    <string name="payment_confirmation">Confirming Payment</string>
    <string name="cancelled">Cancelled</string>
    <string name="disproved">Payment disproved</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="ticket">Ticket</string>
    <string name="status">Status</string>
    <string name="payment_disproved_info">The bus company couldn\'t confirm your payment, if you think there\'s an issue please contact us</string>
    <string name="passenger">Passenger</string>
    <string name="traveler_info">Book a bus seat anywhere, anytime</string>
    <string name="agent">Agent</string>
    <string name="agent_ingo">Market tickets and get commissions</string>
    <string name="account_type">Account type</string>
    <string name="account_type_info">Select the type of account you wish to register with</string>
    <string name="credit">Credit</string>
    <string name="commission">Comission</string>
    <string name="promo_code">Promo Code</string>
    <string name="current_balance">Current Balance</string>
    <string name="withdraw">Withdraw</string>
    <string name="transactions">Transactions</string>
    <string name="booked_ticket">Booked Seat</string>
    <string name="language">Language</string>
    <string name="account_deactivated_info">Your account has been deactivated, if you think there\'s a mistake please contact us</string>
    <string name="update">Update</string>
    <string name="past_ticket">Past Ticket</string>
    <string name="terms_and_conditions_label">Terms and Conditions</string>
    <string name="night_mode">Night Mode</string>
    <string name="points">Points</string>
    <string name="cannot_change_account_disclaimer">Disclaimer: account type cannot be changed after this point</string>
    <string name="should_be_9_numbers">Should be 9 numbers</string>
    <string name="invalid_number">Invalid number</string>
    <string name="fullname_required">Full name required</string>
    <string name="contact_options">Contact Options</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="phone_call">Phone Call</string>
    <string name="withdraw_credit_whatsapp_link">"https://wa.me/249117427796?text=Credit%20withdraw%20for%20account:%20"</string>
    <string name="enter_code">Enter code</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="invite_a_friend_info">Share Safraa with friends and family</string>
    <string name="join_safraa">Try Safraa</string>
    <string name="join_safraa_detail">Book travel bus tickets safely and easily</string>
    <string name="invitation_link">Join Safraa and book a travel bus ticket anywhere, anytime \n\n %s </string>
    <string name="social_media">Social Media</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
</resources>