<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:isPreferenceVisible="false">

    <PreferenceCategory
        app:allowDividerBelow="true"
        app:key="personal"
        app:title="@string/personal_info">

        <Preference
            app:defaultValue="NA"
            app:key="name"
            app:title="@string/name" />

        <Preference
            app:defaultValue="NA"
            app:key="phone"
            app:title="@string/mobile_number" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="personal">
        <Preference
            app:defaultValue="en"
            app:icon="@drawable/ic_language"
            app:key="language"
            app:title="@string/language" />
    </PreferenceCategory>

</PreferenceScreen>